--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,25 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.1.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
 
     implementation "com.google.dagger:hilt-android:2.28-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+
+    implementation 'ru.ldralighieri.corbind:corbind:1.3.2'
+    implementation 'ru.ldralighieri.corbind:corbind-appcompat:1.3.2'
+    implementation 'ru.ldralighieri.corbind:corbind-core:1.3.2'
+    implementation 'ru.ldralighieri.corbind:corbind-drawerlayout:1.3.2'
+    implementation 'ru.ldralighieri.corbind:corbind-leanback:1.3.2'
+    implementation 'ru.ldralighieri.corbind:corbind-navigation:1.3.2'
+    implementation 'ru.ldralighieri.corbind:corbind-recyclerview:1.3.2'
+    implementation 'ru.ldralighieri.corbind:corbind-slidingpanelayout:1.3.2'
+    implementation 'ru.ldralighieri.corbind:corbind-swiperefreshlayout:1.3.2'
+    implementation 'ru.ldralighieri.corbind:corbind-viewpager:1.3.2'
+    implementation 'ru.ldralighieri.corbind:corbind-viewpager2:1.3.2'
+    implementation 'ru.ldralighieri.corbind:corbind-material:1.3.2'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
 }
