--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ android {
     }
 }
 
+//TODO extract versions
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -39,25 +40,27 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    //nav
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
 
+    //hilt
     implementation "com.google.dagger:hilt-android:2.28-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
 
+    // clicks to coroutines
     implementation 'ru.ldralighieri.corbind:corbind:1.3.2'
-    implementation 'ru.ldralighieri.corbind:corbind-appcompat:1.3.2'
-    implementation 'ru.ldralighieri.corbind:corbind-core:1.3.2'
-    implementation 'ru.ldralighieri.corbind:corbind-drawerlayout:1.3.2'
-    implementation 'ru.ldralighieri.corbind:corbind-leanback:1.3.2'
-    implementation 'ru.ldralighieri.corbind:corbind-navigation:1.3.2'
-    implementation 'ru.ldralighieri.corbind:corbind-recyclerview:1.3.2'
-    implementation 'ru.ldralighieri.corbind:corbind-slidingpanelayout:1.3.2'
-    implementation 'ru.ldralighieri.corbind:corbind-swiperefreshlayout:1.3.2'
-    implementation 'ru.ldralighieri.corbind:corbind-viewpager:1.3.2'
-    implementation 'ru.ldralighieri.corbind:corbind-viewpager2:1.3.2'
-    implementation 'ru.ldralighieri.corbind:corbind-material:1.3.2'
 
+    //coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
+
+    // mvi kotlin
+    implementation "com.arkivanov.mvikotlin:mvikotlin:2.0.0-rc1"
+    implementation "com.arkivanov.mvikotlin:mvikotlin-main:2.0.0-rc1"
+    implementation "com.arkivanov.mvikotlin:mvikotlin-logging:2.0.0-rc1"
+    implementation "com.arkivanov.mvikotlin:mvikotlin-timetravel:2.0.0-rc1"
+    implementation "com.arkivanov.mvikotlin:mvikotlin-extensions-coroutines:2.0.0-rc1"
+    implementation "com.arkivanov.mvikotlin:androidx-lifecycle-interop:2.0.0-rc1"
 }
