--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     //hilt
     implementation "com.google.dagger:hilt-android:2.28-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01'
 
     // clicks to coroutines
     implementation 'ru.ldralighieri.corbind:corbind:1.3.2'
@@ -55,12 +57,9 @@ dependencies {
     //coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-alpha05'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-alpha05'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-alpha05'
 
-    // mvi kotlin
-    implementation "com.arkivanov.mvikotlin:mvikotlin:2.0.0-rc1"
-    implementation "com.arkivanov.mvikotlin:mvikotlin-main:2.0.0-rc1"
-    implementation "com.arkivanov.mvikotlin:mvikotlin-logging:2.0.0-rc1"
-    implementation "com.arkivanov.mvikotlin:mvikotlin-timetravel:2.0.0-rc1"
-    implementation "com.arkivanov.mvikotlin:mvikotlin-extensions-coroutines:2.0.0-rc1"
-    implementation "com.arkivanov.mvikotlin:androidx-lifecycle-interop:2.0.0-rc1"
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
 }
