--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,10 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-alpha05'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-alpha05'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-alpha05'
-
     implementation 'android.arch.lifecycle:extensions:1.1.1'
+
+    // rainbowcake
+    implementation "co.zsmb:rainbow-cake-core:1.0.0"
+    implementation "co.zsmb:rainbow-cake-timber:1.0.0"
+
 }
