--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.github.Lighture:BetterAdapter:1.1.0'
 
     //nav
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
